Prototype. ER diagram